--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,19 @@
-databases:
-  - name: myapp-db
-    plan: free
-
 services:
   - type: web
-    name: myapp
+    name: hosanaPosBackendAPI
     runtime: ruby
     plan: free
     buildCommand: './bin/render-build.sh'
-    startCommand: 'bundle exec rails server'
+    startCommand: './bin/rails server'
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: myapp-db
+          name: hosannapointdb
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
       - key: WEB_CONCURRENCY
         value: 2
+databases:
+  - name: hosannapointdb
+    plan: free
