--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,14 @@
+databases:
+  - name: hosannapointdb
+    databaseName: hosannapointdb
+    user: hosannapointdb_user
+
 services:
   - type: web
     name: hosanaPosBackendAPI
     runtime: ruby
-    plan: free
-    buildCommand: './bin/render-build.sh'
-    startCommand: './bin/rails server'
+    buildCommand: "./bin/render-build.sh"
+    startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -12,8 +16,3 @@ services:
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
-      - key: WEB_CONCURRENCY
-        value: 2
-databases:
-  - name: hosannapointdb
-    plan: free
