--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,7 @@
 # PostgreSQL. Versions 9.3 and up are supported.
-
 default: &default
   adapter: postgresql
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
@@ -20,6 +17,9 @@ test:
   password: <%=ENV['PASSWORD']%>
 
 production:
-  <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
-  
+  primary:
+    <<: *default
+    url: <%= ENV['DATABASE_URL'] %>
+  cable:
+    <<: *default
+    url: <%= ENV['DATABASE_URL'] %>
