--- a/config/database.yml
+++ b/config/database.yml
@@ -26,3 +26,6 @@ production:
   queue:
     <<: *default
     url: <%= ENV['DATABASE_URL'] %>
+  cache:
+    <<: *default
+    url: <%= ENV['DATABASE_URL'] %>
